[package]
name = "deploy-queue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "migrate", "postgres", "tls-rustls", "time"] }
time = { version = "0.3", features = ["serde", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
humantime-serde = "1"
humantime = "2.3.0"

[build-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_allgen = "0.2"

[dev-dependencies]
url = "2.5.7"
