[package]
name = "mutexbot"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5.38", features = ["derive", "env"] }
log = "0.4.27"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
anyhow = "1"
clap = { version = "4.5.38", features = ["derive", "env"] }
clap_allgen = "0.2.1"
