[package]
name = "mutexbot"
version = "0.2.4"
edition = "2024"

[dependencies]
anyhow = "1"
ghactions = { version = "0.15", features = ["log", "macros", "generate"], default-features = false }
reqwest = { version = "0.12", features = ["json", "default-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
