[package]
name = "mutexbot"
version = "0.3.3"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_allgen = "0.2"
