[project]
name = "neon-release-pr"
version = "0.1.0"
description = "CLI to help with neon release PRs."
readme = "README.md"
authors = [
    { name = "JC Grünhage", email = "jc@neon.tech" }
]
# 3.10 is required for ubuntu-22.04
requires-python = ">=3.10"
dependencies = [
    "rich>=14.0.0",
    "typer[all]>=0.15.2",
]

[project.scripts]
neon-release-pr = "neon_release_pr.cli:app"

[build-system]
requires = ["uv_build>=0.7,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
