[project]
name = "neon-release-pr"
version = "0.3.0"
description = "CLI to help with neon release PRs."
readme = "README.md"
authors = [
    { name = "JC Grünhage", email = "jc.gruenhage@databricks.com" }
]
# 3.10 is required for ubuntu-22.04
requires-python = ">=3.10"
dependencies = [
    "rich>=14.2.0",
    "typer-slim>=0.20.0",
]

[project.scripts]
neon-release-pr = "neon_release_pr.cli:app"

[build-system]
requires = ["uv_build>=0.10.4,<0.11"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "ty>=0.0.17",
]
